* Added unit tests for the utility module.
* Improved the admin logic for handling HTTPS configuration.
* Updated README with feature addition.
* Added a cred checker to the admin sub-package for use with manhole (and in
the future, the admin web ui + guard).
* Added a setup function for an SSH admin server.
* Added a pasword crypt utility.
* Updated the configuration docs.

2008.06.27 oubiwann

* Updated models to take list parameters for the model objects they contain.
* Updated ProxyManager to do the same.
* Cleaned up the config in txlbWeb.tac.
* Updated configuredProxyManagerFactory to pass a list instead of a dict.
* Added the getFirstService convenience method to ProxyManager.
* Moved tracker and enabled group code from txlbWeb.tac into
LoadBalancedService.proxiesFactory.
* Updated the ProxyHost model with attributes that could be useful in the near
future.
* Corrected a comment in txlbWeb.tac.
* Updated setupProxyServices to use the new API.
* Fixed typo in a comment.
* Updated TODO with notes from Glyph.
* Added a host mapping class to make configuration easier for developers.
* Added tests for HostMapper.
* Updated txlbWeb.tac with a HostMapper version of configuration.
* Added some explanatory docstrings to the example app, txlbWeb.tac.
* Added a converted for a list of HostMapper to model.Proxy*.
* Updated code and docs to reference the new lb type constants as objects (not
strings).
* Updated txlbWeb.tac to use the new signature of HostMapper that includes the
lbType.
* Added a type-checker in proxyManagerFactory to determine whether to treat the
passed object as a collection of models or mappers.
* Updated TODO.

2008.06.26 oubiwann

* Found the bug documented in ticket #242868
(https://bugs.launchpad.net/txloadbalancer/+bug/242868).
* Removed debugging print statements.
* Removed the bug from the TODO.
* Started fleshing out the txlbWeb.tac some more.
* Updated the TODO with some next steps in this exploration.