@@ -29,7 +29,8 @@
     </group>
     <enable group="main" />
     </service>
-    <admin listen="localhost:7001">
+    <admin>
+    <web listen="localhost:7001" />
     <user name="fulluser" password="iy9l0V1MkG1DE" access="full"/>
     </admin>
     <logging file="pydir.log"/>
